--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     background-color: rgb(0, 0, 0);
 }
+html {
+    scroll-behavior: smooth;
+}
 @font-face {
     font-family: 'kornucopia';
     src: url(font/kornucopia.ttf) format('truetype');
@@ -12,10 +15,42 @@ header {
     position: sticky;
     top: 0px;
     display: flex;
-    flex-direction: row;
     gap: 55px;
     padding: 10px;
     justify-content: center;
+    z-index: 1;
+}
+.headerrow {
+    display: flex;
+}
+.discography {
+    display: flex;
+    justify-self: flex-start;
+    align-items: center;
+}
+.discography button {
+    width: 150px;
+}
+.rotate {
+    transform: rotate(180deg);
+}
+.arrowdown:hover {
+    fill: red;
+}
+.discographybox {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    right: 410px;
+    top: 90px;
+    padding: 10px;
+}
+.discographybox a {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+.discographybox a:hover {
+    color: rgb(255, 0, 0);
 }
 button {
     height: auto;
@@ -74,7 +109,20 @@ button a:hover {
     background-color: rgb(0, 0, 0);
     outline: 1px solid white;
 }
-
+.albumbox {
+    display: flex;
+    justify-content: center;
+    gap: 75px;
+    flex-wrap: wrap;
+    position: relative;
+}
+.albumhover {
+    display: none;
+    position: absolute;
+    left: 400px;
+    z-index: 0;
+    width: max-content;
+}
 .albumsec {
     display: flex;
     flex-direction: column;
@@ -97,9 +145,6 @@ button a:hover {
     text-decoration: none;
     color: rgb(255, 255, 255);
 }
-.album a:hover {
-    text-decoration: dotted underline;
-}
 /* Album Pages */
 body {
     font-family: 'Barlow Condensed', sans-serif;
@@ -120,10 +165,11 @@ body {
     flex-direction: column;
     justify-self: center;
     text-align: center;
-    gap: 10px;
 }
 /* Self-Titles */
 .selftrack {
+    font-family: kornucopia;
+    font-size: xx-large;
     color: red;
     text-decoration: none;
 }
@@ -132,6 +178,8 @@ body {
 }
 /* Life Is Peachy */
 .lifetrack {
+    font-family: kornucopia;
+    font-size: xx-large;
     color: purple;
     text-decoration: none;
 }
@@ -140,6 +188,8 @@ body {
 }
 /* Follow The Leader */
 .followtrack {
+    font-family: kornucopia;
+    font-size: xx-large;
     color: green;
     text-decoration: none;
 }
@@ -148,6 +198,8 @@ body {
 }
 /* Issues */
 .issuetrack {
+    font-family: kornucopia;
+    font-size: xx-large;
     color: orange;
     text-decoration: none;
 }
@@ -156,6 +208,8 @@ body {
 }
 /* Untouchables */
 .untrack {
+    font-family: kornucopia;
+    font-size: xx-large;
     color: rgb(87, 45, 0);
     text-decoration: none;
 }
@@ -164,17 +218,24 @@ body {
 }
 /* Take a Look In The Mirror */
 .taketrack {
-    color: rgb(48, 48, 48);
+    font-family: kornucopia;
+    font-size: xx-large;
+    color: rgb(108, 108, 108);
     text-decoration: none;
 }
 .taketrack:hover {
-    color: gray;
+    color: rgb(196, 196, 196);
 }
 /* See You On The Other Side */
 .seeyoutrack {
+    font-family: kornucopia;
+    font-size: xx-large;
     color: rgb(27, 0, 163);
     text-decoration: none;
 }
 .seeyoutrack:hover {
     color: rgb(0, 82, 154);
+}
+svg:hover {
+    fill: gray;
 }
