--- a/style.css
+++ b/style.css
@@ -28,9 +28,11 @@ header {
     justify-self: flex-start;
     align-items: center;
     position: relative;
+    cursor: pointer;
 }
 .discography button {
     width: 150px;
+    cursor: pointer;
 }
 .rotate {
     transform: rotate(180deg);
@@ -83,7 +85,7 @@ button a:hover {
     justify-self: center;
 }
 .grouppic {
-    width: 100dvh;
+    width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -320,7 +322,7 @@ svg:hover {
         height: auto;
     }
     .grouppic {
-        width: 350px;
+        width: 90%;
         height: auto;
     }
     header {
@@ -339,6 +341,7 @@ svg:hover {
     .arrowdown {
         width: 18px;
         height: 18px;
+        cursor: pointer;
     }
     .discography button {
         width: 75px;
@@ -419,5 +422,15 @@ svg:hover {
     }
     .tracklist {
         font-size: 12px;
+    }
+    .album img {
+        width: 100%;
+        height: 70%;
+    }
+    .album {
+        justify-content: center;
+    }
+    .albumsec {
+        gap: 100px;
     }
 }
