--- a/style.css
+++ b/style.css
@@ -425,12 +425,21 @@ svg:hover {
     }
     .album img {
         width: 100%;
-        height: 70%;
+        height: 60%;
     }
     .album {
-        justify-content: center;
+        justify-content: space-evenly;
     }
     .albumsec {
-        gap: 100px;
+        gap: 75px;
+    }
+    .album a {
+        font-size: x-large;
+        font-weight: 300;
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+    }
+    .album h2 {
+        font-size: medium;
     }
 }
