--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header {
     width: 150px;
     cursor: pointer;
 }
-.rotate {
+.discography .rotate {
     transform: rotate(180deg);
 }
 .arrowdown:hover {
@@ -131,6 +131,9 @@ button a:hover {
     flex-direction: column;
     align-items: center;
     gap: 100px;
+    padding-bottom: 100px;
+    width: 100%;
+    border-bottom: 1px solid white;
 }
 .album {
     display: flex;
@@ -148,6 +151,52 @@ button a:hover {
     text-decoration: none;
     color: rgb(255, 255, 255);
 }
+.toursec {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
+.tourbox {
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+}
+.tour {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+}
+.live {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-self: center;
+    border: 1px solid white;
+    border-bottom: 2px solid white;
+    width: max-content;
+}
+.tourinf {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+}
+.tourheader {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.touryear {
+    display: flex;
+    justify-content: center;
+}
+.years {
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+    align-items: center;
+}
+
 /* Album Pages */
 body {
     font-family: 'Barlow Condensed', sans-serif;
